--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0%;
+}
 h1{
     font-family: 'Yeseva One', cursive;
     font-size: 60px;
@@ -6,13 +9,21 @@ h1{
 }
 h2{
     font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+    
 }
-.first-section{
+h3{
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+}
+.flex-container{
     display: flex;
+    align-items: center;
 }
 .half-width{
 width: 50%;
 margin-left: 5%;
+margin-right: 2%;
 
 }
 a{
@@ -25,4 +36,50 @@ a{
 .heading-color{
     color: #FFAD5A
     ;
+}
+.mission-area{
+    display: flex;
+    justify-content: center;
+}
+#mission-heading{
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    text-align: center;
+}
+.mission-area-element{
+    width: 20%;
+    margin: 3%;
+}
+#mission-background-one{
+    background-color: rgba(79, 157, 166, 0.1);;
+    padding: 2%;
+    border-radius: 24px;
+}
+#mission-background-two{
+    background-color: rgba(255, 89, 89, 0.1);;
+    padding: 2%;
+    border-radius: 24px;
+
+
+}
+#mission-background-three{
+    background-color: #FFF4D6;;
+    padding: 2%;
+    border-radius: 24px;
+
+}
+.develop-section{
+    display: flex;
+    margin-bottom: 10px;
+}
+.develop-element{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:150px 50px;
+    background-size: 420px;
+    
+}
+button{
+    background-image: linear-gradient(orange,tomato);
+        padding: 15px,25px;
 }
