--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ h1{
     font-size: 60px;
     color: #333333
     ;
-}
+    border-left: 5px solid;
+    border-image-slice: 1;
+    border-color: #FF5959;
+padding-left: 10px;}
+
 h2{
     font-family: 'Poppins', sans-serif;
     font-size: 36px;
@@ -15,6 +19,9 @@ h2{
 h3{
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
+}
+p{
+    font-family: 'Poppins', sans-serif;
 }
 .flex-container{
     display: flex;
@@ -70,14 +77,29 @@ a{
 }
 .develop-section{
     display: flex;
+    align-items: center;
+    padding-left: 100px;
     margin-bottom: 10px;
+    
 }
-.develop-element{
+.each-element{
     background-image: url(images/shapes/shape-1.png);
     background-repeat: no-repeat;
-    background-position:150px 50px;
-    background-size: 420px;
+    background-position:6px 27px ;
+    background-size: 295px;
+    width: 50%;
+    margin: 40px;
+    padding-left: 100px;
     
+}
+.global-each-element{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:340px 270px ;
+    background-size: 132px;
+    width: 61%;
+    margin: 40px;
+    padding-right: 100px;
 }
 button{
     background-image: linear-gradient(orange,tomato);
