--- a/style.css
+++ b/style.css
@@ -20,12 +20,20 @@ h3{
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
 }
+h4{
+    font-family: 'Poppins', sans-serif;
+}
+
 p{
     font-family: 'Poppins', sans-serif;
+    padding-top:  10px;
+    padding-bottom: 10px;
 }
 .flex-container{
     display: flex;
     align-items: center;
+    padding-left: 100px;
+    margin-bottom: 10px;
 }
 .half-width{
 width: 50%;
@@ -45,22 +53,27 @@ a{
     ;
 }
 .mission-area{
+    margin: 4%;
     display: flex;
     justify-content: center;
 }
-#mission-heading{
+.center-heading{
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
     text-align: center;
 }
 .mission-area-element{
-    width: 20%;
-    margin: 3%;
+    width: 35%;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+
 }
 #mission-background-one{
     background-color: rgba(79, 157, 166, 0.1);;
     padding: 2%;
     border-radius: 24px;
+
 }
 #mission-background-two{
     background-color: rgba(255, 89, 89, 0.1);;
@@ -74,13 +87,6 @@ a{
     padding: 2%;
     border-radius: 24px;
 
-}
-.develop-section{
-    display: flex;
-    align-items: center;
-    padding-left: 100px;
-    margin-bottom: 10px;
-    
 }
 .each-element{
     background-image: url(images/shapes/shape-1.png);
@@ -101,7 +107,50 @@ a{
     margin: 40px;
     padding-right: 100px;
 }
+.staysafe-element{
+    background-image: url(images/shapes/shape-3.png);
+    background-repeat: no-repeat;
+    background-position:5px 5px ;
+    background-size: 170px;
+    width: 60%;
+    margin: 40px;
+  
+}
+.center-paragraph{
+    text-align: center;
+    color:#333333;
+    margin-left: 110px;
+    margin-right: 110px;
+}
+.solution-flex-container{
+    display: flex;
+    margin: 4%;
+}
+.solution-area-element{
+    background-color: rgba(232, 250, 252, 0.1);;
+    margin: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 24px;
+}
 button{
     background-image: linear-gradient(orange,tomato);
         padding: 15px,25px;
+}
+footer{
+    background-color: black;
+    padding-bottom: 30px;
+    padding-top: 10px;
+}
+.footer-heading{
+    font-family: 'Lobster Two', cursive;
+    color: white;
+    font-size: 36px;
+    text-align: center;
+
+}
+.footer-paragraph{
+    color: white;
+    text-align: center;
+    
 }
